# SmartCat

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: DOCLING_PLAN.md  EVAL_QUESTIONS.md  PLAN.md  SYSTEM_DESIGN.md
scripts/: batch_chunk.py  batch_convert.py  batch_embed.py  batch_qa_extract.py  batch_translate.py  embed_qa.py  eval_embeddings.py  extract_attachments.py  ingest_maildir.py  parse_tbk.py  run_eval.py  runpod_install.sh  runpod_start_all.sh  start_all.bat  start_llama.bat  start_llama_14b.bat  start_llama_35b_moe.bat  start_llama_glm.bat  start_web.bat  stop_all.bat
src/smartcat/: __init__.py  config.py  mcp_server.py
src/smartcat/agent/: react_agent.py  streaming.py  tools.py
src/smartcat/api/: app.py  deps.py  models.py  routes_agora.py  routes_chat.py  routes_openai.py
src/smartcat/chunking/: email_chunker.py
src/smartcat/cli/: main.py
src/smartcat/conversion/: docling_converter.py  pdf_utils.py  surya_ocr.py
src/smartcat/embedding/: embedder.py
src/smartcat/parsing/: mbox_parser.py  metadata.py  mime_parser.py  threading.py
src/smartcat/retrieval/: hybrid_search.py  reranker.py
src/smartcat/storage/: qdrant_store.py  sqlite_store.py
src/smartcat/translation/: detector.py  (+1 more)
tests/: conftest.py  generate_test_pdfs.py  test_agent_tools.py  test_chunking.py  test_embedder.py  test_hybrid_search.py  test_mbox_parser.py  test_metadata.py  test_mime_parser.py  test_ocr.py  test_pdf_utils.py  test_storage.py  test_threading.py  test_translation.py
web/: chat.js  index.html  style.css
